exports[`test renders ./components/auto-complete/demo/antd.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px;">
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
              ant-select-selection--single"
    role="combobox">
    <div
      class="ant-select-selection__rendered">
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none;"
        unselectable="unselectable">
        input here
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline">
          <div
            class="ant-select-search__field__wrap">
            <textarea
              class="ant-input ant-select-search__field"
              style="height:50px;" />
            <span
              class="ant-select-search__field__mirror" />
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none;"
      unselectable="unselectable">
      <b />
    </span>
  </div>
</div>
`;

exports[`test renders ./components/auto-complete/demo/basic.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px;">
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
              ant-select-selection--single"
    role="combobox">
    <div
      class="ant-select-selection__rendered">
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none;"
        unselectable="unselectable">
        input here
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline">
          <div
            class="ant-select-search__field__wrap">
            <input
              class="ant-input ant-input ant-select-search__field"
              type="text"
              value="" />
            <span
              class="ant-select-search__field__mirror" />
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none;"
      unselectable="unselectable">
      <b />
    </span>
  </div>
</div>
`;

exports[`test renders ./components/auto-complete/demo/options.md correctly 1`] = `
<div
  class="ant-select-show-search ant-select-auto-complete ant-select ant-select-combobox ant-select-enabled"
  style="width:200px;">
  <div
    aria-autocomplete="list"
    aria-expanded="false"
    aria-haspopup="true"
    class="ant-select-selection
              ant-select-selection--single"
    role="combobox">
    <div
      class="ant-select-selection__rendered">
      <div
        class="ant-select-selection__placeholder"
        style="display:block;user-select:none;-webkit-user-select:none;"
        unselectable="unselectable">
        input here
      </div>
      <ul>
        <li
          class="ant-select-search ant-select-search--inline">
          <div
            class="ant-select-search__field__wrap">
            <input
              class="ant-input ant-input ant-select-search__field"
              type="text"
              value="" />
            <span
              class="ant-select-search__field__mirror" />
          </div>
        </li>
      </ul>
    </div>
    <span
      class="ant-select-arrow"
      style="user-select:none;-webkit-user-select:none;"
      unselectable="unselectable">
      <b />
    </span>
  </div>
</div>
`;
